--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -21,3 +21,27 @@ textarea:focus {
     border: .125rem solid var(--stroke-highlight);
     outline-offset: .1px; /*Faz a borda aparecer no safari*/ 
 }
+
+input[type="date"] {
+    position: relative;
+
+    &::-webkit-calendar-picker-indicator {
+        opacity: 0;
+    }
+
+    &::before {
+        content: "";
+        width: 1.25rem;
+        height: 1.25rem;
+        position: absolute;
+        background: url(../../assets/icons/calendar-03.svg) center/contain;
+        right: 1rem;
+
+        top: 50%;
+        transform: translateY(-50%);
+    }
+}
+
+select {
+    background: url(../../assets/icons/arrow-down-01.svg) no-repeat calc(100% - 1rem);
+}
